--- a/resources.html
+++ b/resources.html
@@ -41,6 +41,12 @@
                 <li><a href="https://phet.colorado.edu/" target="_blank">PhET Interactive Simulations</a> - Fun, interactive simulations for physics, chemistry, and biology.</li>
             </ul>
         </section>
+        <section class="resource-section">
+            <h3>Artificial Intelligence & Machine Learning</h3>
+            <ul class="resource-list">
+                <li><a href="https://github.com/SHSID-Data-science-Club/Highschool_ML_Course" target="_blank">SHSID Data Science Club-ML for high school students.</li>
+            </ul>
+        </section>
     </main>
     <a href="#" class="back-to-top" aria-label="Back to top">↑</a>
     <footer>
