--- a/contribute.html
+++ b/contribute.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>Springfield High Resource Hub</h1>
+        <h1>SHSID Resource Hub</h1>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only">Menu</span></button>
     </header>
     <nav id="primary-navigation">
@@ -27,7 +27,7 @@
     </nav>
     <main>
         <h2>How to Contribute</h2>
-        <p>This project is hosted on GitHub. You can suggest changes by following these steps:</p>
+        <p>Contact us by email or wechat for contributions.</p>
         
     </main>
     <a href="#" class="back-to-top" aria-label="Back to top">↑</a>
