--- a/resources.html
+++ b/resources.html
@@ -47,6 +47,12 @@
                 <li><a href="https://github.com/SHSID-Data-science-Club/Highschool_ML_Course" target="_blank">SHSID Data Science Club-ML for high school students.</li>
             </ul>
         </section>
+                <section class="resource-section">
+            <h3>SHSID Indexacademics</h3>
+            <ul class="resource-list">
+                <li><a href="https://file.garden/aJSHHExjjB1KFGN6/SHSID%20ARC/G9%20Content" target="_blank">SHSID IDX 24-25 Study Guides(For Personal Use Only)</li>
+            </ul>
+        </section>
     </main>
     <a href="#" class="back-to-top" aria-label="Back to top">↑</a>
     <footer>
